[package]
name = "starter"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.44.2", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
] }
tokio-stream = "0.1.17"
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
